<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Open Fit</string>
    <string name="service_name">Open Fit</string>
    <string name="menu_add">Add Application</string>
    <string name="menu_del">Del Application</string>
    <string name="menu_help">Help</string>
    <string name="dialog_title_add">Add Application</string>
    <string name="dialog_close_add">Close</string>
    <string name="dialog_title_del">Del Application</string>
    <string name="dialog_close_del">Close</string>
    <string name="dialog_title_help">Open Fit Help</string>
    <string name="dialog_edit_rejectcall_messages">Reject messages</string>
    <string name="dialog_close_rejectcall_messages">Close</string>
    <string name="dialog_save_rejectcall_messages">Save</string>
    <string name="dialog_rejectcall_messages_hint">Add message</string>
    <string name="dialog_message_help"><b>Application Notifications:</b>
        \nFor applications notifications to work,
        you must turn on "Notification Access" for the Open Fit application.
        Open the phone settings and search for \'Notification Access\'.
        \n\nIf notifications do not work please try one of the following:
        \n\t◦ Disable \'Notification Access\' and re-enable it
        \n\t◦ Restart your phone
        \n\n<b>Connection Problems:</b>
        \nIf you cannot pair with Gear Fit from Open Fit application,
        go to bluetooth settings, and remove the Gear Fit from the list of paired devices,
        then scan and pair to the Gear Fit via the Open Fit app.
        \n<b>Note:</b> You may need to reset the Gear Fit.
        \n\n<b>Weather Updates:</b>
        \nWeather updates will occur once every hour and use http://openweathermap.org
        \n\n<b>Premium features:</b>
        \n\n\t◦ Google Fit Auto Sync
        \n\n<b>Auto Sync with Goolge Fit:</b>
        \n\t◦ Enable Google Fit Sync
        \n\t◦ Sync will occur once an hour automatically
        \n\n<b>Contributing:</b>
        \nTo contribute please visit the official XDA forum at:
        \nhttp://goo.gl/y2Fkmt
    </string>
    <string name="dialog_close_help">Close</string>
    <string name="dialog_title_fitness">Fitness</string>
    <string name="dialog_close_fitness">Close</string>
    <string name="dialog_sync_fitness">Sync</string>
    <string name="dialog_title_news">Open Fit News</string>
    <string name="dialog_message_news"><b>v1.10.1</b>
        \n• Improved notifications
        \n\t• Force notification listener
        \n\t• Fixed notification crash
        \n• Alternative Media Controller
        \n\t• Toggle if the music app does not work
        \n• Auto launch Open Fit on reboot
        \n\nGoogle Fit Sync is premium feature. Please make sure fitness data works properly before purchasing Open Fit Premium. Please read the help section for more info.
    </string>
    <string name="dialog_do_not_show_again_news">Do not show again</string>
    <string name="dialog_close_news">Close</string>
    <string name="dialog_title_notification_access">Notification Access</string>
    <string name="dialog_message_notification_access"><b>Important:</b>
        \nIn order for Open Fit Notifications to work, you must enable <b>Notification Access!</b>
        \n\nOpen the settings below and make sure Open Fit is enabled.
    </string>
    <string name="dialog_open_notification_access">Open</string>
    <string name="dialog_close_notification_access">Close</string>
    <string name="dialog_title_purchase">Open Fit Premium</string>
    <string name="dialog_message_purchase">Thank you for the purchase and the support.
        \n\nFor any support related questions, please email: solderbyte@gmail.com
    </string>
    <string name="dialog_close_purchase">Close</string>
    <string name="preference_category_connectivity_title">Connectivity</string>
    <string name="preference_switch_bluetooth_title">Enable Bluetooth</string>
    <string name="preference_scan_title">Scan</string>
    <string name="preference_scan_dialog">Scan Bluetooth</string>
    <string name="preference_scan_summary">Scan for Gear Fit</string>
    <string name="preference_scan_summary_scanning">Scanning&#8230;please wait</string>
    <string name="preference_list_devices_title">Show Devices</string>
    <string name="preference_list_devices_dialog">Select Gear Fit</string>
    <string name="preference_list_devices_summary">Select Gear Fit</string>
    <string name="preference_checkbox_connect_title">Connect</string>
    <string name="preference_checkbox_connect_on">Connected</string>
    <string name="preference_checkbox_connect_off">Disconnected</string>
    <string name="preference_list_devices_default">None</string>
    <string name="preference_category_device_title">Device</string>
    <string name="preference_checkbox_sms_title">Text Messages</string>
    <string name="preference_checkbox_phone_title">Phone Calls</string>
    <string name="preference_edit_rejectcall_messages_title">Reject Phone Calls</string>
    <string name="preference_edit_rejectcall_messages_summary">Edit Reject Phone Calls Messages</string>
    <string name="preference_checkbox_time_title">Clock Format</string>
    <string name="preference_checkbox_time_on">24-hour Clock</string>
    <string name="preference_checkbox_time_off">12-hour Clock</string>
    <string name="preference_list_weather_title">Weather Updates</string>
    <string name="preference_list_weather_dialog">Select Weather</string>
    <string name="preference_list_weather_summary">Select Option</string>
    <string name="preference_list_weather_default">none</string>
    <string name="preference_fitness_title">Fitness</string>
    <string name="preference_fitness_dialog">Fitness</string>
    <string name="preference_fitness_summary">Request Fitness Data</string>
    <string name="preference_checkbox_googlefit_title">Google Fit Sync</string>
    <string name="preference_checkbox_googlefit_on">Sync Enabled</string>
    <string name="preference_checkbox_googlefit_off">Sync Disabled</string>
    <string name="preference_checkbox_exercise_gps_title">GPS</string>
    <string name="preference_checkbox_exercise_gps_on">GPS Allowed For Exercise</string>
    <string name="preference_checkbox_exercise_gps_off">Allow GPS For Exercise</string>
    <string name="preference_checkbox_mediacontroller_title">Media Controller</string>
    <string name="preference_checkbox_mediacontroller_on">Android keycode</string>
    <string name="preference_checkbox_mediacontroller_off">Android music service command</string>
    <string name="preference_category_apps_title">Applications</string>
    <string name="preference_category_openfit_title">Open Fit</string>
    <string name="preference_autostart_at_boot_title">Auto Launch</string>
    <string name="preference_autostart_at_boot_summary">Automatically start Open Fit after a reboot</string>
    <string name="preference_donate_title">Donate</string>
    <string name="preference_donate_summary">Make a donation via PayPal</string>
    <string name="preference_purchase_title">Purchase Premium</string>
    <string name="preference_purchase_summary">Purchase Premium features. Please see help for more information.</string>
    <string name="preference_purchased_summary">Thank you for purchasing Open Fit Premium</string>
    <string name="preference_applications_summary">No applications added. Click the + icon at the top menu to add an application. Make sure Notification Access is Enabled, otherwise notifcations will not work</string>
    <string name="toast_bluetooth_enable">Enabling&#8230;</string>
    <string name="toast_bluetooth_scan">Scanning&#8230;</string>
    <string name="toast_bluetooth_scan_complete">Scanning complete. Please select device</string>
    <string name="toast_bluetooth_connect">Attempting to connect to:</string>
    <string name="toast_bluetooth_fitness">Requesting fitness data&#8230;</string>
    <string name="toast_bluetooth_enabled">Bluetooth enabled</string>
    <string name="toast_bluetooth_enabled_failed">Bluetooth failed</string>
    <string name="toast_bluetooth_connected">Gear Fit connected</string>
    <string name="toast_bluetooth_disconnected">Gear Fit disconnected</string>
    <string name="toast_bluetooth_connect_failed">Gear Fit connect failed</string>
    <string name="toast_bluetooth_devices_failed">Gear Fit connect failed</string>
    <string name="toast_google_fit_connect">Connecting to Google Fit</string>
    <string name="toast_google_fit_disconnect">Disconnecting To Google Fit</string>
    <string name="toast_google_fit_sync">Syncing to Google Fit&#8230;</string>
    <string name="toast_google_fit_sync_success">Sync complete</string>
    <string name="toast_google_fit_sync_failure">Sync failed</string>
    <string name="toast_google_fit_sync_no_purchase">Sync is a premium feature. Please purchase Open Fit premium</string>
    <string name="toast_premium_purchased">Thank you for purchasing Open Fit Premium. Please shut down and restart Open Fit.</string>
    <string name="notification_title">Open Fit</string>
    <string name="notification_connected">Connected to Gear Fit</string>
    <string name="notification_disconnected">Disconnected to Gear Fit</string>
    <string name="notification_button_connect">Connect</string>
    <string name="notification_button_disconnect">Disconnect</string>
    <string name="notification_button_close">Shut Down</string>
    <string name="progress_dialog_syncing">Syncing to Google Fit.\nPlease allow up to 5 minutes</string>
    <string name="calendar_event">Event</string>
    <string name="calendar_when">When</string>
    <string name="toast_send_sms_success">SMS sended</string>
    <string name="toast_send_sms_failed">Send SMS failed</string>
</resources>
