<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preference_category_connectivity_title" >
        <SwitchPreference
            android:title="@string/preference_switch_bluetooth_title"
            android:key="preference_switch_bluetooth"/>
        <Preference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_scan"
            android:title="@string/preference_scan_title"
            android:dialogTitle="@string/preference_scan_dialog"
            android:summary="@string/preference_scan_summary"/>
        <ListPreference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_list_devices"
            android:title="@string/preference_list_devices_title"
            android:dialogTitle="@string/preference_list_devices_dialog"
            android:summary="@string/preference_list_devices_summary"
            android:entries="@array/preference_list_devices_entries"
            android:entryValues="@array/preference_list_devices_values"
            android:defaultValue="@string/preference_list_devices_default" />
        <CheckBoxPreference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_checkbox_connect"
            android:title="@string/preference_checkbox_connect_title"
            android:summaryOn="@string/preference_checkbox_connect_on"
            android:summaryOff="@string/preference_checkbox_connect_off"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_device_title" >
        <CheckBoxPreference
            android:key="preference_checkbox_sms"
            android:title="@string/preference_checkbox_sms_title"
            android:icon="@drawable/open_sms"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="preference_checkbox_phone"
            android:title="@string/preference_checkbox_phone_title"
            android:icon="@drawable/open_phone"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="preference_checkbox_time"
            android:title="@string/preference_checkbox_time_title"
            android:summaryOn="@string/preference_checkbox_time_on"
            android:summaryOff="@string/preference_checkbox_time_off" 
            android:icon="@drawable/open_clock"
            android:defaultValue="false" />
        <ListPreference
            android:key="preference_list_weather"
            android:title="@string/preference_list_weather_title"
            android:icon="@drawable/open_weather"
            android:dialogTitle="@string/preference_list_weather_dialog"
            android:summary="@string/preference_list_weather_summary"
            android:entries="@array/preference_list_weather_entries"
            android:entryValues="@array/preference_list_weather_values"
            android:defaultValue="@string/preference_list_weather_default" />
        <Preference
            android:key="preference_fitness"
            android:icon="@drawable/open_heart"
            android:title="@string/preference_fitness_title"
            android:dialogTitle="@string/preference_fitness_dialog"
            android:summary="@string/preference_fitness_summary"/>
        <CheckBoxPreference
            android:key="preference_checkbox_googlefit"
            android:title="@string/preference_checkbox_googlefit_title"
            android:summaryOn="@string/preference_checkbox_googlefit_on"
            android:summaryOff="@string/preference_checkbox_googlefit_off" 
            android:icon="@drawable/open_sync"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_apps_title"
        android:key="preference_category_apps">
    </PreferenceCategory>

    <Preference
        android:key="preference_donate"
        android:icon="@drawable/open_donate"
        android:title="@string/preference_donate_title"
        android:summary="@string/preference_donate_summary"/>
</PreferenceScreen>
